/* 
  Localizable.strings
  LocalizableUI

  Created by Jan Weiß on 01.08.17.
  Copyright © 2017 Jan Weiß, Philipp Weiß. All rights reserved.
*/

"example-title-overview" = "Overview";
"example-back-button" = "Custom Back";

"example-cell-text-segmented-control" = "Example for UIButton and UISegmentedControl";
"example-cell-text-label" = "Example for UILabel, UITextField and UITextView";
"example-cell-tabbar" = "Example for UITabBar";
"example-cell-language-change" = "Example for custom language change";
"example-overview-cell-description" = "This cells are also localized from the storyboard.";
"example-cell-customView" = "Example for a custom View";
"example-cell-alert" = "Example Alert";

"example-tab-button-1" = "Tab 1";
"example-tab-button-2" = "Tab 2";

"example-bar-button-cancel" = "Cancel";

"example-button" = "Custom button text";

"example-segment-1" = "Segment 1";
"example-segment-2" = "Segment 2";
"example-segment-3" = "Segment 3";
"example-segment-4" = "Segment 4";

"example-label" = "Custom label text";
"example-textfield-placeholder" = "Custom placeholder text";
"example-textview-text" = "Custom text view text";

"example-language-changed" = "Click to change language";
"example-language-changed-localized" = "Language change between DE and ENEN";

"example-customView-label" = "My Custom View";

"example-alert-title" = "title";
"example-alert-message" = "message";
"example-alert-button" = "button";
